# FLIGHT

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  RULES.MD  core.h  core0.h  core1.h  i2c.h  main.cpp  run.py  sdcard.h  storage.h
.claude/: settings.local.json
adc/: acs770.h  hx711.h
app/: CommandLine.h  Core0Controller.h  Core1Controller.h  Scheduler.h  SystemCore.h  SystemState.h  app_config.h  app_error.h  app_logging.h  core0.cpp  core1.cpp
common/: channels.h
devices/: CMakeLists.txt  ads1115_s.cpp  hx711_s.cpp
devices/include/: ads1115_s.h  hx711_s.h
devices/misc/: config.settings  flash_storage.h  utility.h
filesystem/: CMakeLists.txt  filesystem.cpp  filesystem.h
filesystem/fat32/: configs.h  file.cpp  utils.h  volume.cpp
filesystem/include/: error.h  fat32.h  sdcard.h
filesystem/sdcard/: configs.h  sdcard.cpp  spi_interface.cpp
ftl/: CMakeLists.txt  ftl.h  ftl.settings  generate_messages.py  messages.yaml
ftl/core/: ftl_api.cpp  ftl_api.h
ftl/include/transport/: uart.h
ftl/include/transport/internal/: uart_multicore.h  uart_rx.h  uart_tx.h
ftl/templates/: message.h.j2  messages.cpp.j2  messages.h.j2  messages_detail.h.j2  serialization.h.j2
ftl/transport/uart/: dma_control.cpp  dma_control.h  multicore_tx.cpp  multicore_tx.h  uart.cpp  uart_dma.cpp  uart_multicore.cpp  uart_rx.cpp  uart_rx.h  uart_tx.cpp  uart_tx.h
ftl/util/: allocator.h  cqueue.h  crc16.h  device_id.h  misc.h
http/: USAGE.md  access_point.cpp  access_point.h  http_core.h  http_platform.h
http/config/: http_config.h  lwipopts.h
http/core/: http_events.cpp  http_events.h  http_router.cpp  http_router.h  http_server.cpp  http_server.h  http_types.h  http_utils.h
http/core/events/: event_dispatcher.h  event_types.h  telemetry_event_handler.h  timer_event_handler.h
http/core/index/: index_handler.h  status_handler.h
http/network/: dhcp_server.cpp  dhcp_server.h  dns_server.cpp  dns_server.h
http/servers/: dhcp_server.cpp  dhcp_server.h  dns_server.cpp  dns_server.h  http_events.cpp  http_events.h  http_router.cpp  http_router.h  http_server.cpp  http_server.h  http_status.cpp  http_status.h
http/ui/: http_generator.cpp  http_generator.h
i2c/: i2c_bus.h  i2c_concepts.h  i2c_config.h  i2c_device.h  i2c_driver.h
i2c/drivers/: ads1115.h  bmp581.h  icm20948.h  ms4525d0.h
lib/: CMakeLists.txt
lib/sdcard/: CMakeLists.txt
lib/sdcard/src/ff15/source/: ff.c  ff.h
lib/sdcard/src/include/: crc.h  delays.h  f_util.h  ff_stdio.h  hw_config.h
lib/sdcard/src/sd_driver/: dma_interrupts.c  sd_card.c  sd_card.h  sd_card_constants.h
lib/sdcard/src/sd_driver/SDIO/: rp2040_sdio.c
lib/sdcard/src/sd_driver/SPI/: my_spi.c  my_spi.h  sd_card_spi.c  sd_card_spi.h  sd_spi.c  sd_spi.h  spi_driver.cpp  spi_driver.h
lib/sdcard/src/src/: crash.c  crc.c  f_util.c  ff_stdio.c  glue.c
lib/sh2/: CMakeLists.txt
misc/: config.settings
network/: CMakeLists.txt  network.cpp  network.h  types.h
network/handlers/: dispatcher.cpp  dispatcher.h  handler_index.cpp  handler_sensors.cpp  handler_sensors.h  handler_session.cpp  handler_session.h  handler_status.cpp  response_helpers.h  shared_state.h
network/include/: concepts.h  error.cpp  error.h  types.h
network/platform/: config.cpp  config.h  connection.cpp  connection.h  error.h  handles.h  lwip_wrapper.cpp  lwip_wrapper.h  lwipopts.h  pico_wrapper.cpp  pico_wrapper.h
network/services/: config.h  dhcp_service.cpp  dhcp_service.h  dns_service.cpp  dns_service.h  http_service.cpp  http_service.h  service_manager.cpp  service_manager.h
sdcard/: sd_config.h  sd_driver.cpp  sd_driver.h  sd_file.h  sd_filesystem.h
storage/: storage_config.h  storage_impl.cpp  storage_impl.h
